feat(notebooks): add data loading section in 01_data_prep notebook

--- a/notebooks/01_data_prep.ipynb
+++ b/notebooks/01_data_prep.ipynb
@@ -25,6 +25,34 @@
     "\n",
     "My dataset is balanced (~130k samples per class) and derived from a large news corpus for human text, with AI variants created using local DeepSeeck. I experiment with transformer-based models (BERT, RoBERTa, Longformer) to develop and evaluate our detector. This notebook begins with data preparation steps.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Loading\n",
+    "\n",
+    "First, I load the raw dataset of articles. The data is expected as a CSV file (`final_dataset.csv`) containing at least a text and label for each entry. I'll use my `data_utils.load_raw_data` function, which reads the path from my configuration.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from utils import data_utils\n",
+    "\n",
+    "# Load raw data\n",
+    "raw_df = data_utils.load_raw_data()\n",
+    "print(f\"Loaded raw dataset with {raw_df.shape[0]} entries and columns: {list(raw_df.columns)}\")\n",
+    "raw_df.head(3)\n"
+   ]
   }
  ],
  "metadata": {
