feat(notebooks): add data preparation (flatten & clean) in 01_data_prep notebook

--- a/notebooks/01_data_prep.ipynb
+++ b/notebooks/01_data_prep.ipynb
@@ -41,16 +41,102 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'config.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# add the project root (one level up) into Python’s module search path\u001b[39;00m\n\u001b[0;32m      4\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mgetcwd(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m)))\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m data_utils\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Load raw data\u001b[39;00m\n\u001b[0;32m      8\u001b[0m raw_df \u001b[38;5;241m=\u001b[39m data_utils\u001b[38;5;241m.\u001b[39mload_raw_data()\n",
-      "File \u001b[1;32mC:\\Testing\\Final_Year_Project\\AI-Text-Detection-Tool\\utils\\data_utils.py:11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Load configuration once at module import\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mconfig.yaml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     12\u001b[0m     config \u001b[38;5;241m=\u001b[39m yaml\u001b[38;5;241m.\u001b[39msafe_load(f)\n\u001b[0;32m     13\u001b[0m _DATA_PATH \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpaths\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mraw_data\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'config.yaml'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new cwd: C:\\Testing\\Final_Year_Project\\AI-Text-Detection-Tool\n"
      ]
+    }
+   ],
+   "source": [
+    "# move up one level so that open(\"config.yaml\") works\n",
+    "import os\n",
+    "os.chdir(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
+    "print(\"new cwd:\", os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[data_utils] Loaded raw data: 128967 records, 3 columns.\n",
+      "Loaded raw dataset with 128967 entries and columns: ['human_written', 'ai_paraphrased', 'ai_generated']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>human_written</th>\n",
+       "      <th>ai_paraphrased</th>\n",
+       "      <th>ai_generated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LONDON (Reuters) - Italy's 10-year government ...</td>\n",
+       "      <td>London (Reuters)  Italys 10-year government bo...</td>\n",
+       "      <td>PIMCO has expressed concerns about the risk co...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Yankees vs Tigers brawl was so crazy ... t...</td>\n",
+       "      <td>One night, when the 83-year-old Larry King, wh...</td>\n",
+       "      <td>The Yankees and Tigers had a heated baseball b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Meet Otto Von Schirach. He's been DJing since ...</td>\n",
+       "      <td>Heres a fresh take on the article with nearly ...</td>\n",
+       "      <td>Otto Von Schirach: A DJ Who Meets Fashion\\n\\n...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       human_written  \\\n",
+       "0  LONDON (Reuters) - Italy's 10-year government ...   \n",
+       "1  The Yankees vs Tigers brawl was so crazy ... t...   \n",
+       "2  Meet Otto Von Schirach. He's been DJing since ...   \n",
+       "\n",
+       "                                      ai_paraphrased  \\\n",
+       "0  London (Reuters)  Italys 10-year government bo...   \n",
+       "1  One night, when the 83-year-old Larry King, wh...   \n",
+       "2  Heres a fresh take on the article with nearly ...   \n",
+       "\n",
+       "                                        ai_generated  \n",
+       "0  PIMCO has expressed concerns about the risk co...  \n",
+       "1  The Yankees and Tigers had a heated baseball b...  \n",
+       "2   Otto Von Schirach: A DJ Who Meets Fashion\\n\\n...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -64,6 +150,52 @@
     "raw_df = data_utils.load_raw_data()\n",
     "print(f\"Loaded raw dataset with {raw_df.shape[0]} entries and columns: {list(raw_df.columns)}\")\n",
     "raw_df.head(3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preparation\n",
+    "\n",
+    "Next, I ensure the dataset is in a standard format and clean the text. I will:\n",
+    "1. **Flatten** the dataset into `text` and `label` columns using our `flatten_dataset` function.\n",
+    "2. **Clean** the text strings (lowercase, remove extra whitespace) with `clean_text`.\n",
+    "\n",
+    "This prepares the data for downstream analysis and modeling.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[data_utils] Loaded raw data: 128967 records, 3 columns.\n",
+      "[data_utils] Flattened dataset: 386901 records with columns ['text', 'label']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import data_utils, text_cleaner\n",
+    "\n",
+    "# 1) Load the raw DataFrame (your three‑column CSV)\n",
+    "raw_df = data_utils.load_raw_data()\n",
+    "\n",
+    "# 2) Flatten into the two‑column format (text + label)\n",
+    "df = data_utils.flatten_dataset(raw_df)\n",
+    "\n",
+    "# 3) Clean the text strings in place\n",
+    "df['text'] = df['text'].apply(lambda t: text_cleaner.clean_text(t, lemmatize=False))\n",
+    "\n",
+    "# 4) Inspect a sample and label distribution\n",
+    "print(\"Sample cleaned text:\")\n",
+    "print(df.loc[0, 'text'][:100] + \"...\")\n",
+    "print(\"Labels distribution:\", df['label'].value_counts().to_dict())\n",
+    "\n"
    ]
   },
   {
