docs(notebooks): add feature engineering intro in 03_feature_engineering notebook

--- a/notebooks/02_eda.ipynb
+++ b/notebooks/02_eda.ipynb
@@ -368,6 +368,20 @@
     "plt.savefig(\"diagrams/readability_sentiment_dist_colored.png\", dpi=150)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA Summary\n",
+    "\n",
+    "- **Balanced Classes:** Each of the three labels has roughly 128 967 samples—exactly the balanced split we intended.  \n",
+    "- **Length Differences:** Human‐written pieces run the longest (median ≈ 255 words), AI‑generated texts sit in the middle (≈ 210 words), and AI‑paraphrased articles are shortest (≈ 185 words).  \n",
+    "- **Readability:** AI‑paraphrased content is the easiest to read (avg. Flesch ≈ 43.8), then AI‑generated (≈ 37.8); human prose is marginally more complex.  \n",
+    "- **Sentiment:** AI‑generated texts skew slightly positive (VADER compound ≈ 0.40), AI‑paraphrased a bit less so (≈ 0.31), and human writing hovers around neutral.  \n",
+    "\n",
+    "These differences are quite subtle, which is why we need a model (e.g. a transformer) to pick up on the small stylistic and tonal cues. Next up: feature engineering and model training!\n"
+   ]
   }
  ],
  "metadata": {
