feat(notebooks): add baseline Random Forest + TF-IDF in 03_feature_engineering notebook

--- a/notebooks/03_feature_engineering.ipynb
+++ b/notebooks/03_feature_engineering.ipynb
@@ -241,6 +241,49 @@
     "print(\"Baseline Random Forest Performance:\")\n",
     "print(classification_report(y_val, y_pred, digits=3))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %% [markdown]\n",
+    "# ### Baseline Random Forest — Visual Evaluation\n",
+    "\n",
+    "# %% [code]\n",
+    "import numpy as np\n",
+    "from utils import viz\n",
+    "\n",
+    "# 1) Confusion matrix\n",
+    "fig_cm = viz.plot_confusion_matrix(\n",
+    "    y_val, \n",
+    "    y_pred, \n",
+    "    labels=clf.classes_.tolist(), \n",
+    "    normalize=False, \n",
+    "    save_path=\"diagrams/baseline_confusion_matrix.png\"\n",
+    ")\n",
+    "plt.show()\n",
+    "\n",
+    "# 2) ROC curves (one‑vs‑rest)\n",
+    "y_prob = clf.predict_proba(X_val)\n",
+    "fig_roc = viz.plot_roc_curves(\n",
+    "    y_true=np.array([list(clf.classes_).index(l) for l in y_val]),\n",
+    "    y_prob=y_prob,\n",
+    "    class_names=clf.classes_.tolist(),\n",
+    "    save_path=\"diagrams/baseline_roc_curves.png\"\n",
+    ")\n",
+    "plt.show()\n",
+    "\n",
+    "# 3) Precision‑Recall curves\n",
+    "fig_pr = viz.plot_pr_curves(\n",
+    "    y_true=np.array([list(clf.classes_).index(l) for l in y_val]),\n",
+    "    y_prob=y_prob,\n",
+    "    class_names=clf.classes_.tolist(),\n",
+    "    save_path=\"diagrams/baseline_pr_curves.png\"\n",
+    ")\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
