feat(notebooks): save datasets with features in 03_feature_engineering notebook

--- a/notebooks/03_feature_engineering.ipynb
+++ b/notebooks/03_feature_engineering.ipynb
@@ -284,6 +284,28 @@
     ")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Features (optional)\n",
+    "\n",
+    "I save the datasets with our newly computed features in case I want to reuse them later (for error analysis, ensembling, etc.).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save datasets with features added\n",
+    "train_df.to_parquet(\"data/train_with_features.parquet\", index=False)\n",
+    "val_df.to_parquet(\"data/val_with_features.parquet\", index=False)\n",
+    "test_df.to_parquet(\"data/test_with_features.parquet\", index=False)\n",
+    "print(\"Saved train/val/test with features to disk.\")\n"
+   ]
   }
  ],
  "metadata": {
