feat(notebooks): add RoBERTa-base fine-tuning after BERT for comparison

--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✔️ Preferred GPU found → NVIDIA GeForce RTX 4060 Laptop GPU (cuda:0)\n",
+      "✔️ Using preferred GPU → NVIDIA GeForce RTX 4060 Laptop GPU (cuda:0)\n",
       "Data sizes → train: 309520, val: 38690\n",
       "Class weights: [1.0000032308194327, 1.0000032308194327, 0.999993538423763]\n"
      ]
@@ -219,24 +219,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU:   9.9%   RAM:  89.7%\n",
+      "CPU:   5.1%   RAM:  75.8%\n",
       "GPU: NVIDIA GeForce RTX 4060 Laptop GPU | Used: 0.44 GB / 8.59 GB\n",
       "------------------------------------------------------------\n",
-      "⏳ Starting trainer.train() …\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "compute_loss() got an unexpected keyword argument 'num_items_in_batch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 154\u001b[0m\n\u001b[0;32m    152\u001b[0m t0 \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m    153\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m⏳ Starting trainer.train() …\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 154\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    155\u001b[0m t1 \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m    156\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✅ Finished in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(t1\u001b[38;5;241m-\u001b[39mt0)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m60\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m min\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\micha\\.conda\\envs\\myenv\\lib\\site-packages\\transformers\\trainer.py:2245\u001b[0m, in \u001b[0;36mTrainer.train\u001b[1;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[0;32m   2243\u001b[0m         hf_hub_utils\u001b[38;5;241m.\u001b[39menable_progress_bars()\n\u001b[0;32m   2244\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 2245\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   2246\u001b[0m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2247\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2248\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2249\u001b[0m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   2250\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\micha\\.conda\\envs\\myenv\\lib\\site-packages\\transformers\\trainer.py:2556\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[1;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[0;32m   2549\u001b[0m context \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m   2550\u001b[0m     functools\u001b[38;5;241m.\u001b[39mpartial(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccelerator\u001b[38;5;241m.\u001b[39mno_sync, model\u001b[38;5;241m=\u001b[39mmodel)\n\u001b[0;32m   2551\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(batch_samples) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m   2552\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccelerator\u001b[38;5;241m.\u001b[39mdistributed_type \u001b[38;5;241m!=\u001b[39m DistributedType\u001b[38;5;241m.\u001b[39mDEEPSPEED\n\u001b[0;32m   2553\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m contextlib\u001b[38;5;241m.\u001b[39mnullcontext\n\u001b[0;32m   2554\u001b[0m )\n\u001b[0;32m   2555\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m context():\n\u001b[1;32m-> 2556\u001b[0m     tr_loss_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_items_in_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2558\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   2559\u001b[0m     args\u001b[38;5;241m.\u001b[39mlogging_nan_inf_filter\n\u001b[0;32m   2560\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_xla_available()\n\u001b[0;32m   2561\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39misnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m torch\u001b[38;5;241m.\u001b[39misinf(tr_loss_step))\n\u001b[0;32m   2562\u001b[0m ):\n\u001b[0;32m   2563\u001b[0m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[0;32m   2564\u001b[0m     tr_loss \u001b[38;5;241m=\u001b[39m tr_loss \u001b[38;5;241m+\u001b[39m tr_loss \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_globalstep_last_logged)\n",
-      "File \u001b[1;32mc:\\Users\\micha\\.conda\\envs\\myenv\\lib\\site-packages\\transformers\\trainer.py:3718\u001b[0m, in \u001b[0;36mTrainer.training_step\u001b[1;34m(self, model, inputs, num_items_in_batch)\u001b[0m\n\u001b[0;32m   3715\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m loss_mb\u001b[38;5;241m.\u001b[39mreduce_mean()\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[0;32m   3717\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompute_loss_context_manager():\n\u001b[1;32m-> 3718\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_items_in_batch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_items_in_batch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3720\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m inputs\n\u001b[0;32m   3721\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   3722\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs\u001b[38;5;241m.\u001b[39mtorch_empty_cache_steps \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   3723\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs\u001b[38;5;241m.\u001b[39mtorch_empty_cache_steps \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m   3724\u001b[0m ):\n",
-      "\u001b[1;31mTypeError\u001b[0m: compute_loss() got an unexpected keyword argument 'num_items_in_batch'"
+      "⏳ Starting trainer.train() …\n",
+      "{'loss': 0.5968, 'grad_norm': 10.763648986816406, 'learning_rate': 1.9913845093478074e-05, 'epoch': 0.012923235978288964}\n",
+      "{'loss': 0.4308, 'grad_norm': 9.543089866638184, 'learning_rate': 1.982769018695615e-05, 'epoch': 0.025846471956577927}\n",
+      "{'loss': 0.3916, 'grad_norm': 6.777531623840332, 'learning_rate': 1.9741535280434225e-05, 'epoch': 0.03876970793486689}\n",
+      "{'loss': 0.3707, 'grad_norm': 3.571722984313965, 'learning_rate': 1.9655380373912297e-05, 'epoch': 0.051692943913155855}\n",
+      "{'loss': 0.35, 'grad_norm': 12.810379028320312, 'learning_rate': 1.956922546739037e-05, 'epoch': 0.06461617989144482}\n"
      ]
     }
    ],
@@ -394,6 +385,106 @@
     "metrics = trainer.evaluate()\n",
     "print(\"📝 Validation metrics:\", metrics)\n",
     "logging.info(f\"BERT validation metrics → {metrics}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BERT Validation Results\n",
+    "\n",
+    "After fine‑tuning **BERT‑base**, I observe:\n",
+    "\n",
+    "- **Loss:** *`<insert bert_metrics['eval_loss'] here>`*  \n",
+    "- **Accuracy:** *`<insert bert_metrics['eval_accuracy'] here>`*  \n",
+    "- **Macro‑F1:** *`<insert bert_metrics['eval_f1'] here>`*\n",
+    "\n",
+    "These results provide our baseline before moving on to RoBERTa. I’ll compare these metrics directly in the next section.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine‑tune RoBERTa‑base\n",
+    "\n",
+    "Now I train `roberta-base` under the same conditions to see if it improves over BERT.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ── 1) Prepare RoBERTa tokenizer & model ───────────────────────────\n",
+    "tokenizer_roberta = model_utils.get_tokenizer(\"roberta\")\n",
+    "model_roberta     = model_utils.get_model(\"roberta\", num_labels=3).to(device)\n",
+    "\n",
+    "# ── 2) (Re‑)tokenize texts for RoBERTa ─────────────────────────────\n",
+    "#    Note: must redo tokenization because RoBERTa's vocab & special tokens differ\n",
+    "train_enc_roberta = tokenizer_roberta(\n",
+    "    train_df['text'].tolist(),\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=config['training']['max_length']['bert_roberta']\n",
+    ")\n",
+    "val_enc_roberta = tokenizer_roberta(\n",
+    "    val_df['text'].tolist(),\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=config['training']['max_length']['bert_roberta']\n",
+    ")\n",
+    "\n",
+    "# ── 3) Wrap into torch Datasets ────────────────────────────────────\n",
+    "train_dataset_roberta = TextDataset(train_enc_roberta,\n",
+    "                                    [config['model']['label_mapping'][l] for l in train_df['label']])\n",
+    "val_dataset_roberta   = TextDataset(val_enc_roberta,\n",
+    "                                    [config['model']['label_mapping'][l] for l in val_df['label']])\n",
+    "\n",
+    "# ── 4) Update & reuse TrainingArguments ────────────────────────────\n",
+    "#    (point at new output dir, adjust epochs)\n",
+    "training_args_roberta = TrainingArguments(\n",
+    "    output_dir                  = config['paths']['model_dirs']['roberta'],\n",
+    "    num_train_epochs            = int(config['training']['epochs']['roberta']),\n",
+    "    per_device_train_batch_size = int(config['training']['batch_size']['roberta']),\n",
+    "    per_device_eval_batch_size  = int(config['training']['batch_size']['roberta']),\n",
+    "    learning_rate               = float(config['training']['learning_rate']),\n",
+    "    evaluation_strategy         = \"epoch\",\n",
+    "    save_strategy               = \"epoch\",\n",
+    "    load_best_model_at_end      = True,\n",
+    "    metric_for_best_model       = \"f1\",\n",
+    "    logging_strategy            = \"steps\",\n",
+    "    logging_steps               = logging_steps,      # reuse the same logging interval\n",
+    "    report_to                   = \"none\",\n",
+    "    dataloader_pin_memory       = False\n",
+    ")\n",
+    "\n",
+    "# ── 5) Instantiate CustomTrainer for RoBERTa ────────────────────────\n",
+    "trainer_roberta = model_utils.CustomTrainer(\n",
+    "    model           = model_roberta,\n",
+    "    args            = training_args_roberta,\n",
+    "    train_dataset   = train_dataset_roberta,\n",
+    "    eval_dataset    = val_dataset_roberta,\n",
+    "    compute_metrics = model_utils.compute_metrics,\n",
+    "    callbacks       = [EarlyStoppingCallback(\n",
+    "                         early_stopping_patience=int(config['training']['early_stopping_patience'])\n",
+    "                       )],\n",
+    "    use_focal       = bool(config['training']['use_focal_loss']),\n",
+    "    alpha           = weight_list\n",
+    ")\n",
+    "\n",
+    "# ── 6) Train & evaluate ────────────────────────────────────────────\n",
+    "print(\"⏳ Starting RoBERTa training…\")\n",
+    "start = time.time()\n",
+    "trainer_roberta.train()\n",
+    "elapsed = (time.time() - start) / 60\n",
+    "print(f\"✅ RoBERTa training finished in {elapsed:.1f} min\")\n",
+    "\n",
+    "print(\"📝 Evaluating RoBERTa on validation split…\")\n",
+    "roberta_metrics = trainer_roberta.evaluate()\n",
+    "print(\"RoBERTa Validation metrics:\", roberta_metrics)\n",
+    "logging.info(f\"RoBERTa validation metrics → {roberta_metrics}\")\n"
    ]
   }
  ],
