feat(notebooks): add model selection and save final model in 04_train_evolution notebook

--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -227,7 +227,13 @@
       "{'loss': 0.4308, 'grad_norm': 9.543089866638184, 'learning_rate': 1.982769018695615e-05, 'epoch': 0.025846471956577927}\n",
       "{'loss': 0.3916, 'grad_norm': 6.777531623840332, 'learning_rate': 1.9741535280434225e-05, 'epoch': 0.03876970793486689}\n",
       "{'loss': 0.3707, 'grad_norm': 3.571722984313965, 'learning_rate': 1.9655380373912297e-05, 'epoch': 0.051692943913155855}\n",
-      "{'loss': 0.35, 'grad_norm': 12.810379028320312, 'learning_rate': 1.956922546739037e-05, 'epoch': 0.06461617989144482}\n"
+      "{'loss': 0.35, 'grad_norm': 12.810379028320312, 'learning_rate': 1.956922546739037e-05, 'epoch': 0.06461617989144482}\n",
+      "{'loss': 0.3196, 'grad_norm': 2.3776519298553467, 'learning_rate': 1.948307056086844e-05, 'epoch': 0.07753941586973379}\n",
+      "{'loss': 0.3377, 'grad_norm': 5.3430962562561035, 'learning_rate': 1.9396915654346516e-05, 'epoch': 0.09046265184802274}\n",
+      "{'loss': 0.3373, 'grad_norm': 6.457238674163818, 'learning_rate': 1.931076074782459e-05, 'epoch': 0.10338588782631171}\n",
+      "{'loss': 0.3245, 'grad_norm': 6.938093185424805, 'learning_rate': 1.9224605841302664e-05, 'epoch': 0.11630912380460068}\n",
+      "{'loss': 0.3211, 'grad_norm': 9.903175354003906, 'learning_rate': 1.9138450934780736e-05, 'epoch': 0.12923235978288963}\n",
+      "{'loss': 0.3119, 'grad_norm': 6.940680027008057, 'learning_rate': 1.905229602825881e-05, 'epoch': 0.1421555957611786}\n"
      ]
     }
    ],
@@ -485,6 +491,37 @@
     "roberta_metrics = trainer_roberta.evaluate()\n",
     "print(\"RoBERTa Validation metrics:\", roberta_metrics)\n",
     "logging.info(f\"RoBERTa validation metrics → {roberta_metrics}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Selection\n",
+    "\n",
+    "I compare BERT vs RoBERTa on the validation F1 score and choose the best for final deployment.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare F1 scores and pick best\n",
+    "best_model = \"RoBERTa\" if roberta_metrics['eval_f1'] >= bert_metrics['eval_f1'] else \"BERT\"\n",
+    "print(f\"Selected best model: {best_model}\")\n",
+    "\n",
+    "# Save the best model and tokenizer to the final directory\n",
+    "final_dir = config['paths']['model_dirs']['final']\n",
+    "if best_model == \"RoBERTa\":\n",
+    "    trainer_roberta.model.save_pretrained(final_dir)\n",
+    "    tokenizer_roberta.save_pretrained(final_dir)\n",
+    "else:\n",
+    "    trainer_bert.model.save_pretrained(final_dir)\n",
+    "    tokenizer_bert.save_pretrained(final_dir)\n",
+    "\n",
+    "logging.info(f\"Saved {best_model} as final model at {final_dir}\")\n"
    ]
   }
  ],
