--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -233,7 +233,9 @@
       "{'loss': 0.3373, 'grad_norm': 6.457238674163818, 'learning_rate': 1.931076074782459e-05, 'epoch': 0.10338588782631171}\n",
       "{'loss': 0.3245, 'grad_norm': 6.938093185424805, 'learning_rate': 1.9224605841302664e-05, 'epoch': 0.11630912380460068}\n",
       "{'loss': 0.3211, 'grad_norm': 9.903175354003906, 'learning_rate': 1.9138450934780736e-05, 'epoch': 0.12923235978288963}\n",
-      "{'loss': 0.3119, 'grad_norm': 6.940680027008057, 'learning_rate': 1.905229602825881e-05, 'epoch': 0.1421555957611786}\n"
+      "{'loss': 0.3119, 'grad_norm': 6.940680027008057, 'learning_rate': 1.905229602825881e-05, 'epoch': 0.1421555957611786}\n",
+      "{'loss': 0.3214, 'grad_norm': 3.49590802192688, 'learning_rate': 1.8966141121736886e-05, 'epoch': 0.15507883173946757}\n",
+      "{'loss': 0.2976, 'grad_norm': 4.498589515686035, 'learning_rate': 1.887998621521496e-05, 'epoch': 0.16800206771775653}\n"
      ]
     }
    ],
@@ -522,6 +524,120 @@
     "    tokenizer_bert.save_pretrained(final_dir)\n",
     "\n",
     "logging.info(f\"Saved {best_model} as final model at {final_dir}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ─── Validation F1 Comparison ────────────────────────────────────────────\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Gather F1 scores\n",
+    "f1_scores = [\n",
+    "    bert_metrics['eval_f1'],\n",
+    "    roberta_metrics['eval_f1']\n",
+    "]\n",
+    "models = ['BERT‑base', 'RoBERTa‑base']\n",
+    "\n",
+    "# Plot\n",
+    "fig, ax = plt.subplots(figsize=(5, 3))\n",
+    "bars = ax.bar(models, f1_scores, color=['#4F81BD', '#C0504D'])\n",
+    "ax.set_ylim(0, 1)\n",
+    "ax.set_ylabel('Validation F1')\n",
+    "ax.set_title('BERT vs RoBERTa Validation F1')\n",
+    "\n",
+    "# Annotate values\n",
+    "for bar, score in zip(bars, f1_scores):\n",
+    "    ax.text(\n",
+    "        bar.get_x() + bar.get_width()/2,\n",
+    "        score + 0.02,\n",
+    "        f\"{score:.3f}\",\n",
+    "        ha='center',\n",
+    "        va='bottom'\n",
+    "    )\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Evaluation on Test Set\n",
+    "\n",
+    "I now evaluate the selected final model on the held-out test set to report our definitive performance metrics.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare test dataset for evaluation\n",
+    "from datasets import Dataset\n",
+    "\n",
+    "tokenizer_final = tokenizer_roberta if best_model==\"RoBERTa\" else tokenizer_bert\n",
+    "trainer_final   = trainer_roberta if best_model==\"RoBERTa\" else trainer_bert\n",
+    "\n",
+    "test_enc = tokenizer_final(\n",
+    "    test_df['text'].tolist(),\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=config['training']['max_length']['bert_roberta']\n",
+    ")\n",
+    "test_dataset = Dataset.from_dict({\n",
+    "    **test_enc,\n",
+    "    'labels': [config['model']['label_mapping'][l] for l in test_df['label']]\n",
+    "})\n",
+    "\n",
+    "# Evaluate on test set\n",
+    "test_metrics = trainer_final.evaluate(test_dataset=test_dataset)\n",
+    "print(\"Test Set Performance:\", test_metrics)\n",
+    "logging.info(f\"Test set performance: {test_metrics}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ─── Confusion Matrix on Test Set ───────────────────────────────────────\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Get true & predicted labels\n",
+    "y_true = [config['model']['label_mapping'][l] for l in test_df['label']]\n",
+    "preds = trainer_final.predict(test_dataset)\n",
+    "y_pred = preds.predictions.argmax(axis=-1)\n",
+    "\n",
+    "# Build matrix & label names\n",
+    "labels = list(config['model']['label_mapping'].keys())\n",
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "\n",
+    "# Plot\n",
+    "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "sns.heatmap(\n",
+    "    cm,\n",
+    "    annot=True,\n",
+    "    fmt='d',\n",
+    "    cmap='Blues',\n",
+    "    xticklabels=labels,\n",
+    "    yticklabels=labels,\n",
+    "    ax=ax\n",
+    ")\n",
+    "ax.set_xlabel('Predicted Label')\n",
+    "ax.set_ylabel('True Label')\n",
+    "ax.set_title('Test‑Set Confusion Matrix')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
