feat(notebooks): add confusion matrix and ROC/PR plotting in 04_train_evolution notebook

--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -235,7 +235,9 @@
       "{'loss': 0.3211, 'grad_norm': 9.903175354003906, 'learning_rate': 1.9138450934780736e-05, 'epoch': 0.12923235978288963}\n",
       "{'loss': 0.3119, 'grad_norm': 6.940680027008057, 'learning_rate': 1.905229602825881e-05, 'epoch': 0.1421555957611786}\n",
       "{'loss': 0.3214, 'grad_norm': 3.49590802192688, 'learning_rate': 1.8966141121736886e-05, 'epoch': 0.15507883173946757}\n",
-      "{'loss': 0.2976, 'grad_norm': 4.498589515686035, 'learning_rate': 1.887998621521496e-05, 'epoch': 0.16800206771775653}\n"
+      "{'loss': 0.2976, 'grad_norm': 4.498589515686035, 'learning_rate': 1.887998621521496e-05, 'epoch': 0.16800206771775653}\n",
+      "{'loss': 0.3102, 'grad_norm': 5.161295413970947, 'learning_rate': 1.879383130869303e-05, 'epoch': 0.18092530369604548}\n",
+      "{'loss': 0.2906, 'grad_norm': 2.7229197025299072, 'learning_rate': 1.8707676402171106e-05, 'epoch': 0.19384853967433446}\n"
      ]
     }
    ],
@@ -638,6 +640,55 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation Analysis\n",
+    "\n",
+    "Let’s visualize the confusion matrix and ROC/PR curves on the test set to understand where my model excels and where it makes mistakes.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from utils import viz\n",
+    "# Get raw predictions on test\n",
+    "pred_out = trainer_final.predict(test_dataset)\n",
+    "logits = pred_out.predictions\n",
+    "y_true = [config['model']['label_mapping'][l] for l in test_df['label']]\n",
+    "y_pred = logits.argmax(axis=1)\n",
+    "y_prob = torch.softmax(torch.tensor(logits), dim=1).numpy()\n",
+    "\n",
+    "# Plot & save confusion matrix (normalized)\n",
+    "viz.plot_confusion_matrix(\n",
+    "    y_true, y_pred,\n",
+    "    labels=list(config['model']['label_mapping'].keys()),\n",
+    "    normalize=True,\n",
+    "    save_path=\"diagrams/confusion_matrix.png\"\n",
+    ")\n",
+    "\n",
+    "# Plot & save ROC curves\n",
+    "viz.plot_roc_curves(\n",
+    "    y_true, y_prob,\n",
+    "    class_names=list(config['model']['label_mapping'].keys()),\n",
+    "    save_path=\"diagrams/roc_curves.png\"\n",
+    ")\n",
+    "\n",
+    "# Plot & save Precision-Recall curves\n",
+    "viz.plot_pr_curves(\n",
+    "    y_true, y_prob,\n",
+    "    class_names=list(config['model']['label_mapping'].keys()),\n",
+    "    save_path=\"diagrams/pr_curves.png\"\n",
+    ")\n",
+    "\n",
+    "print(\"Saved confusion matrix, ROC curves, and PR curves to diagrams/\")\n"
    ]
   }
  ],
