feat(notebooks): add error analysis section in 04_train_evolution notebook

--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -206,39 +206,6 @@
       "Data sizes → train: 309520, val: 38690\n",
       "Class weights: [1.0000032308194327, 1.0000032308194327, 0.999993538423763]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\.conda\\envs\\myenv\\lib\\site-packages\\transformers\\training_args.py:1611: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU:   5.1%   RAM:  75.8%\n",
-      "GPU: NVIDIA GeForce RTX 4060 Laptop GPU | Used: 0.44 GB / 8.59 GB\n",
-      "------------------------------------------------------------\n",
-      "⏳ Starting trainer.train() …\n",
-      "{'loss': 0.5968, 'grad_norm': 10.763648986816406, 'learning_rate': 1.9913845093478074e-05, 'epoch': 0.012923235978288964}\n",
-      "{'loss': 0.4308, 'grad_norm': 9.543089866638184, 'learning_rate': 1.982769018695615e-05, 'epoch': 0.025846471956577927}\n",
-      "{'loss': 0.3916, 'grad_norm': 6.777531623840332, 'learning_rate': 1.9741535280434225e-05, 'epoch': 0.03876970793486689}\n",
-      "{'loss': 0.3707, 'grad_norm': 3.571722984313965, 'learning_rate': 1.9655380373912297e-05, 'epoch': 0.051692943913155855}\n",
-      "{'loss': 0.35, 'grad_norm': 12.810379028320312, 'learning_rate': 1.956922546739037e-05, 'epoch': 0.06461617989144482}\n",
-      "{'loss': 0.3196, 'grad_norm': 2.3776519298553467, 'learning_rate': 1.948307056086844e-05, 'epoch': 0.07753941586973379}\n",
-      "{'loss': 0.3377, 'grad_norm': 5.3430962562561035, 'learning_rate': 1.9396915654346516e-05, 'epoch': 0.09046265184802274}\n",
-      "{'loss': 0.3373, 'grad_norm': 6.457238674163818, 'learning_rate': 1.931076074782459e-05, 'epoch': 0.10338588782631171}\n",
-      "{'loss': 0.3245, 'grad_norm': 6.938093185424805, 'learning_rate': 1.9224605841302664e-05, 'epoch': 0.11630912380460068}\n",
-      "{'loss': 0.3211, 'grad_norm': 9.903175354003906, 'learning_rate': 1.9138450934780736e-05, 'epoch': 0.12923235978288963}\n",
-      "{'loss': 0.3119, 'grad_norm': 6.940680027008057, 'learning_rate': 1.905229602825881e-05, 'epoch': 0.1421555957611786}\n",
-      "{'loss': 0.3214, 'grad_norm': 3.49590802192688, 'learning_rate': 1.8966141121736886e-05, 'epoch': 0.15507883173946757}\n",
-      "{'loss': 0.2976, 'grad_norm': 4.498589515686035, 'learning_rate': 1.887998621521496e-05, 'epoch': 0.16800206771775653}\n",
-      "{'loss': 0.3102, 'grad_norm': 5.161295413970947, 'learning_rate': 1.879383130869303e-05, 'epoch': 0.18092530369604548}\n",
-      "{'loss': 0.2906, 'grad_norm': 2.7229197025299072, 'learning_rate': 1.8707676402171106e-05, 'epoch': 0.19384853967433446}\n"
-     ]
     }
    ],
    "source": [
@@ -653,9 +620,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'trainer_final' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m viz\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Get raw predictions on test\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m pred_out \u001b[38;5;241m=\u001b[39m \u001b[43mtrainer_final\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(test_dataset)\n\u001b[0;32m      5\u001b[0m logits \u001b[38;5;241m=\u001b[39m pred_out\u001b[38;5;241m.\u001b[39mpredictions\n\u001b[0;32m      6\u001b[0m y_true \u001b[38;5;241m=\u001b[39m [config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel_mapping\u001b[39m\u001b[38;5;124m'\u001b[39m][l] \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m test_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'trainer_final' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from utils import viz\n",
@@ -689,6 +668,35 @@
     ")\n",
     "\n",
     "print(\"Saved confusion matrix, ROC curves, and PR curves to diagrams/\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error Analysis\n",
+    "\n",
+    "To understand our model’s mistakes, let’s look at a few examples where the predicted label differs from the true label (especially between AI‑generated and AI‑paraphrased).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Find misclassified indices\n",
+    "mis_idx = np.where(y_pred != y_true)[0]\n",
+    "print(f\"Total misclassifications: {len(mis_idx)} ({len(mis_idx)/len(y_true)*100:.2f}% of test set)\")\n",
+    "\n",
+    "# Display first 5 misclassified examples\n",
+    "for idx in mis_idx[:5]:\n",
+    "    true_label = list(config['model']['label_mapping'].keys())[y_true[idx]]\n",
+    "    pred_label = list(config['model']['label_mapping'].keys())[y_pred[idx]]\n",
+    "    print(f\"\\nExample {idx}: True = {true_label}, Predicted = {pred_label}\")\n",
+    "    print(test_df.iloc[idx]['text'][:200] + \"...\\n\")\n"
    ]
   }
  ],
